--- a/stack.yaml
+++ b/stack.yaml
@@ -40,6 +40,7 @@ extra-deps:
   - text-1.2.4.0
   - hspec-megaparsec-2.1.0
   - mtl-2.2.2
+  - safe-0.3.19
 # - acme-missiles-0.3
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
