--- a/edam.cabal
+++ b/edam.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: bfa74f8fe29fda6623f6e8a4b84bdd54988cbc49e4d90e46aee5829c1f1c00cf
+-- hash: 865ef1d4feb4155de80f930e0c8e0c155d7c3693c1227be348a685eb3c441546
 
 name:           edam
 version:        0.1.0.0
@@ -35,6 +35,7 @@ library
       Paths_edam
   hs-source-dirs:
       src
+  ghc-options: -Wall
   build-depends:
       base >=4.7 && <5
     , hspec ==2.7.2
@@ -51,7 +52,7 @@ executable edam-exe
       Paths_edam
   hs-source-dirs:
       app
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
   build-depends:
       base >=4.7 && <5
     , edam
