--- a/package.yaml
+++ b/package.yaml
@@ -30,6 +30,8 @@ dependencies:
 
 library:
   source-dirs: src
+  ghc-options:
+  - -Wall
 
 executables:
   edam-exe:
@@ -39,6 +41,7 @@ executables:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
+    - -Wall
     dependencies:
     - edam
 
