--- a/edam.cabal
+++ b/edam.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 865ef1d4feb4155de80f930e0c8e0c155d7c3693c1227be348a685eb3c441546
+-- hash: ac6271ffb7bff60180afe9b171c84f3110b8406218a57655112c44e58288395f
 
 name:           edam
 version:        0.1.0.0
@@ -43,6 +43,7 @@ library
     , megaparsec >=8.0.0 && <9
     , mtl ==2.2.2
     , prettyprinter >=1.7.0 && <1.8
+    , safe ==0.3.19
     , text ==1.2.4.0
   default-language: Haskell2010
 
@@ -61,6 +62,7 @@ executable edam-exe
     , megaparsec >=8.0.0 && <9
     , mtl ==2.2.2
     , prettyprinter >=1.7.0 && <1.8
+    , safe ==0.3.19
     , text ==1.2.4.0
   default-language: Haskell2010
 
@@ -80,5 +82,6 @@ test-suite edam-test
     , megaparsec >=8.0.0 && <9
     , mtl ==2.2.2
     , prettyprinter >=1.7.0 && <1.8
+    , safe ==0.3.19
     , text ==1.2.4.0
   default-language: Haskell2010
